ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: fwu-bmi.online
      http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo
                port: 
                  number: 5678
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-uptime-kuma
                port: 
                  number: 3001
  tls:
    - hosts:
      - fwu-bmi.online
      secretName: www-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: argocd.fwu-bmi.online
  tls:
  - hosts:
    - argocd.fwu-bmi.online
    secretName: www-tls
